# vibe_pi

./: .gitignore  CLAUDE.md  LICENSE  README.md  boards.json  protocol.md
.github/ISSUE_TEMPLATE/: board_request.md  bug_report.md
.github/workflows/: build.yml
docs/: BOARD_PORTING_GUIDE.md  CONFIGURATION.md  CONTRIBUTING.md  QUICK_START.md  TROUBLESHOOTING.md
docs/setup/: index.html
firmware/: lv_conf.h  platformio.ini
firmware/boards/_template/: board_def.h.template
firmware/boards/gc9a01_round_generic/: board_def.h
firmware/boards/waveshare_175_amoled/: board_def.h
firmware/drivers/display/: co5300_driver.cpp  co5300_driver.h  gc9a01_driver.cpp  gc9a01_driver.h
firmware/drivers/power/: axp2101.cpp  axp2101.h
firmware/drivers/touch/: cst816_driver.cpp  cst816_driver.h  cst9217_driver.cpp  cst9217_driver.h
firmware/hal/: board.h  board_registry.cpp  display_hal.h  touch_hal.h
firmware/include/: config.h
firmware/src/: lv_conf.h  main.cpp  test_hw.cpp
firmware/src/display/: display.cpp  display.h
firmware/src/network/: mdns_discovery.cpp  mdns_discovery.h  serial_config.cpp  serial_config.h  wifi_provision.cpp  wifi_provision.h  ws_client.cpp  (+1 more)
host/: pyproject.toml
host/menubar/: README.md  setup.py  vibe_pi_menubar.py  window.py
host/service/: vibepi.plist  vibepi.service
host/src/: cli.py  config.py  device_registry.py  history.py  main.py  ota_server.py  pairing.py  protocol.py  serial_transport.py
host/src/collectors/: __init__.py  base.py  claude_code.py  codex.py  cursor.py  gemini_cli.py  process_cache.py  system.py  windsurf.py
host/src/server/: mdns.py  web_dashboard.py  ws_server.py
host/tests/: test_history.py
web/: index.html
website/: README.md  app.js  docs.css  docs.html  download.css  download.html  index.html  styles.css
(+36 files in other folders)
