[project]
name = "vibe-pi-host"
version = "0.1.0"
description = "Host agent for Vibe Pi - collects AI coding tool status and pushes to ESP32 display"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "websockets>=13.0",
    "watchdog>=4.0",
    "psutil>=5.9",
]

[project.scripts]
vibe-pi-host = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
