[project]
name = "vibe-pi-host"
version = "0.2.0"
description = "Host agent for Vibe Pi — AI coding tool status monitor for ESP32-S3 AMOLED display"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "aiohttp>=3.10",
    "psutil>=6.0",
    "pyserial>=3.5",
    "zeroconf>=0.136.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
vibe-pi-host = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
